# animal_chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  animal_chess_vi_VN.ts  compile_commands.json  main.cpp  mainwindow.cpp  mainwindow.h
configuration/: chess_board
customLib/chessElement/: ChessPieceFactory.cpp  ChessPieceFactory.h  chessCell.cpp  chessCell.h  chessPiece.cpp  chessPiece.h
customLib/customWidget/: widgetChessBoard.cpp  widgetChessBoard.h  widgetElapsedClock.cpp  widgetElapsedClock.h  widgetMenuBar.cpp  widgetMenuBar.h
customLib/enum/: chessTeamEnum.h  chessTerrainEnum.h
resources/: resourceMap.qrc
resources/asset/terrain_background/: goal_blue.psd
resources/cms/: animal_chess_vi_VN.ts
resources/configuration/: chess_board.yaml
resources/styles/: mainWindowUI.css  widgetChessCell.css
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindowUI.cpp  mainwindowUI.h  mainwindowUI.ui
src/libs/chessElement/ChessPosition/: chessPosition.cpp  chessPosition.h
src/libs/chessElement/chessBoard/: chessBoard.cpp  chessBoard.h
src/libs/chessElement/chessCell/: chessCell.cpp  chessCell.h
src/libs/chessElement/chessPiece/: chessPiece.cpp  chessPiece.h
src/libs/component/dragger/: dragger.cpp  dragger.h
src/libs/component/dropper/: dropper.cpp  dropper.h
src/libs/component/styler/: styler.cpp  styler.h
src/libs/enums/: chessPieceEnum.h
src/libs/enums/chessPieceEnum/: chessPieceEnum.cpp  chessPieceEnum.h
src/libs/enums/chessTeamEnum/: chessTeamEnum.cpp  chessTeamEnum.h
src/libs/enums/chessTerrainEnum/: chessTerrainEnum.h
src/libs/enums/chessTypeEnum/: chessTypeEnum.cpp  chessTypeEnum.h
src/libs/layout/: chessBoardLayout.cpp  chessBoardLayout.h
src/libs/logic/validMoveSuggester/: ValidMoveSuggester.cpp  ValidMoveSuggester.h
src/libs/ultilities/configurationParser/: configurationParser.cpp  configurationParser.h
src/libs/ultilities/function/: helper.cpp  helper.h
src/libs/widgets/selectableWidget/: selectableWidget.cpp  selectableWidget.h
src/libs/widgets/styleWidget/: styleWidget.h  styleWidget.hpp
src/libs/widgets/widgetChessBoard/: widgetChessBoard.cpp  widgetChessBoard.h  widgetChessBoard.ui
src/libs/widgets/widgetChessCell/: widgetChessCell.cpp  widgetChessCell.h  widgetChessCell.ui
src/libs/widgets/widgetChessPiece/: widgetChessPiece.cpp  widgetChessPiece.h  widgetChessPiece.ui
src/libs/widgets/widgetElapsedClock/: widgetElapsedClock.cpp  widgetElapsedClock.h  widgetElapsedClock.ui
src/libs/widgets/widgetMenuBar/: widgetMenuBar.cpp  widgetMenuBar.h
